avoid tree view wrapping.

--- a/css/tree-view.css
+++ b/css/tree-view.css
@@ -4,6 +4,7 @@
   border-left: 1px dotted;
   list-style-type: none;
   padding: 0 0 0 15px;
+  width:400px; /* Note: this is to stop tree items wrapping, but a better solution is probably available */;
 }
 
 .TreeNodesList--collapsed {
